tamed chaotic OrderService, added missing endpoints & Swagger docs
